samples/_failures_safe/1761398523_367872_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce724208.c: In function ‘main’:
./samples/SAFE/__tmp_ce724208.c:149:54: error: expected ‘)’ at end of input
  149 |     print_buffer_hex(compressed.data, compressed.size
      |                     ~                                ^
      |                                                      )
./samples/SAFE/__tmp_ce724208.c:149:5: error: expected declaration or statement at end of input
  149 |     print_buffer_hex(compressed.data, compressed.size
      |     ^~~~~~~~~~~~~~~~
